Add/remove favourite tags.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -31,6 +31,7 @@ who_to_follow: Who to follow
 who_to_follow_getting_started: Follow these people to get started
 no_who_to_follow: Nobody to follow
 ctrl_copy: Ctrl + C to copy
+add_to_favourite: favourite
 favtags.required: Tag cannot be blank
 more_tags: more tags
 
