--- a/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.id.yml
@@ -31,6 +31,7 @@ who_to_follow: Rekomendasi user
 who_to_follow_getting_started: Follow orang-orang ini untuk memulai
 no_who_to_follow: Tidak ada rekomendasi
 ctrl_copy: Ctrl + C untuk mengkopi
+add_to_favourite: favorit
 favtags.required: Tag tidak boleh kosong
 more_tags: tag lain
 
