change landing page message.

--- a/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
+++ b/src/Adstacy/AppBundle/Resources/translations/messages.en.yml
@@ -182,7 +182,7 @@ flash:
 
 landing:
     welcome: 'The #1 Social Advertising Media'
-    desc: 'Share & Find Any Promotional Ads'
+    desc: find and share any promotional ads easily
     explore: Explore Now
     features:
         easy:
